stop overflow

--- a/docs/css/distributors2.css
+++ b/docs/css/distributors2.css
@@ -192,5 +192,7 @@ img {
 	padding-bottom:1rem;
 	line-height: 1.2rem;
 	font-size: 1rem;
+	margin-left: 1vw;
+	margin-right:1vw;
 }
 }
